--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,16 +1,15 @@
 // Text colors
-$color-body-text: var(--color-body-text);
+$color-body-text: #000;
 
 // Background colors
-$color-body: var(--color-main-background);
+$color-body: #fff;
 
 // Placeholders
 $placeholder-color-foreground: #161d25;
 $placeholder-color-background: #f9fafb;
 
 // Other colors
-$color-accent: var(--color-accent);
-$color-border: var(--color-border);
+$color-border: #ddd;
 
 // Helper colors for form error states
 $color-disabled: #000000;
