--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -57,3 +57,15 @@ $breakpoints: (
   $large-up '(min-width: #{$grid-large})',
   $widescreen '(min-width: #{$grid-widescreen})'
 );
+
+// Spacing
+$spacing-unit: 5px;
+$spacing-data: (
+  0: 0,
+  1: rem($spacing-unit),
+  2: rem($spacing-unit * 2),
+  3: rem($spacing-unit * 3),
+  4: rem($spacing-unit * 4),
+  5: rem($spacing-unit * 5),
+  6: rem($spacing-unit * 6)
+);
