--- a/src/styles/core/_typography.scss
+++ b/src/styles/core/_typography.scss
@@ -9,6 +9,15 @@ body {
   font-size: 1.6rem;
 }
 
+body,
+button,
+input,
+select,
+textarea {
+  -webkit-font-smoothing: antialiased;
+  text-size-adjust: 100%;
+}
+
 h1,
 h2,
 h3,
@@ -18,13 +27,58 @@ h6 {
   font-family: $font-heading;
 }
 
-body,
-input,
-textarea,
-button,
-select {
-  -webkit-font-smoothing: antialiased;
-  text-size-adjust: 100%;
+h1 {
+  font-size: font-size(h1);
+}
+
+h2 {
+  font-size: font-size(h2);
+}
+
+h3 {
+  font-size: font-size(h3);  
+}
+
+h4 {
+  font-size: font-size(h4);
+}
+
+h5 {
+  font-size: font-size(h5);
+}
+
+h6 {
+  font-size: font-size(h6);
+}
+
+.h1 {
+  @extend h1;
+}
+
+.h2 {
+  @extend h2;
+}
+
+.h3 {
+  @extend h3;
+}
+
+.h4 {
+  @extend h4;
+}
+
+.h5 {
+  @extend h5;
+}
+
+.h6 {
+  @extend h6;
+}
+
+p {
+  &:not(:last-child) {
+    margin: 0 0 spacing(3);
+  }
 }
 
 a:focus {
