Created 12 column grid system with flexbox

--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -18,6 +18,7 @@
 @import './core/forms';
 @import './core/helpers';
 @import './core/layout';
+@import './core/grid';
 @import './core/media';
 @import './core/responsive-tables';
 @import './core/rte';
