--- a/src/styles/utilities/_mixins.scss
+++ b/src/styles/utilities/_mixins.scss
@@ -107,3 +107,42 @@
   margin: 0;
   clip: auto;
 }
+
+/**
+  * Prefix mixin for generating vendor prefixes.
+  * Based on https://github.com/thoughtbot/bourbon/blob/v4-stable/app/assets/stylesheets/addons/_prefixer.scss
+  *
+  * Usage:
+  *  // Input:
+  *  .element {
+  *    @include prefix(transform, scale(1), ms webkit spec);
+  *  }
+  *
+  *  // Output:
+  *  .element {
+  *    -ms-transform: scale(1);
+  *    -webkit-transform: scale(1);
+  *    transform: scale(1);
+  *  }
+*/
+@mixin prefix($property, $value, $prefixes) {
+  @each $prefix in $prefixes {
+    @if $prefix == webkit {
+      -webkit-#{$property}: $value;
+    } @else
+    if $prefix == moz {
+      -moz-#{$property}: $value;
+    } @else
+    if $prefix == ms {
+      -ms-#{$property}: $value;
+    } @else
+    if $prefix == o {
+      -o-#{$property}: $value;
+    } @else
+    if $prefix == spec {
+      #{$property}: $value;
+    } @else {
+      @warn 'Unrecognized prefix: #{$prefix}';
+    }
+  }
+}
