--- a/src/styles/utilities/_variables.scss
+++ b/src/styles/utilities/_variables.scss
@@ -46,14 +46,18 @@ $font-size-base: font-size(base);
 $transition-duration: 250ms;
 $transition-timing: ease-in-out;
 
+// Sizing Variables
+$site-width: rem(1180px);
+$gutter: rem(30px);
+$gutter-mobile: rem(20px);
+$grid-gutter: rem(30px);
+$grid-gutter-mobile: rem(20px);
+
 // Grid Breakpoints and Class Names - DO NOT change variable names
 $grid-small: 575px;
 $grid-medium: 768px;
 $grid-large: 990px;
 $grid-widescreen: 1200px;
-$grid-max-width: 73.75em;
-$grid-gutter: rem(30px);
-$grid-gutter-mobile: rem(20px);
 
 // Breakpoints used with the media-query mixin
 $xs: 'xs';
