--- a/src/styles/core/_typography.scss
+++ b/src/styles/core/_typography.scss
@@ -25,6 +25,16 @@ h4,
 h5,
 h6 {
   font-family: $font-heading;
+  line-height: 1;
+  margin: 0 0 spacing(3);
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+
+  a {
+    color: inherit;
+    text-decoration: none;
+    font-weight: inherit;
+  }
 }
 
 h1 {
@@ -36,7 +46,7 @@ h2 {
 }
 
 h3 {
-  font-size: font-size(h3);  
+  font-size: font-size(h3);
 }
 
 h4 {
@@ -81,6 +91,14 @@ p {
   }
 }
 
-a:focus {
+a {
+  color: $color-body-text;
+  text-decoration: none;
+  &:focus {
+    color: inherit;
+  }
+}
+
+a[href^="tel"] {
   color: inherit;
 }
