--- a/src/sections/header.liquid
+++ b/src/sections/header.liquid
@@ -89,7 +89,7 @@
         value="{{ search.terms | escape }}"
         placeholder="{{ 'general.search.placeholder' | t }}">
 
-      <button type="submit" class="button">
+      <button type="submit" class="btn">
         {% include 'icon-search' %}
         <span class="icon-fallback-text">{{ 'general.search.submit' | t }}</span>
       </button>
