--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -1,11 +1,38 @@
-.button {
+.btn {
+  user-select: none;
+  appearance: none;
   display: inline-block;
   vertical-align: middle;
   width: auto;
-  border: 0;
+  border: 1px solid transparent;
   text-align: center;
   white-space: nowrap;
   text-decoration: none;
-  user-select: none;
-  appearance: none;
+  background-color: $color-btn-primary;
+  color: $color-btn-primary-text;
+  font-weight: $font-weight-bold;
+  text-transform: uppercase;
+  letter-spacing: 0.08em;
+  white-space: normal;
+
+  &[disabled] {
+    cursor: default;
+  }
+}
+
+.btn--secondary {
+  color: $color-btn-secondary-text;
+  background-color: $color-btn-secondary;
+}
+
+.btn--link {
+  background-color: transparent;
+  border: 0;
+  margin: 0;
+  color: $color-body-text;
+  text-align: left;
+
+  .icon {
+    vertical-align: middle;
+  }
 }
