--- a/src/templates/customers/register.liquid
+++ b/src/templates/customers/register.liquid
@@ -45,7 +45,7 @@
     placeholder="{{ 'customer.register.password' | t }}">
 
   <p>
-    <input type="submit" value="{{ 'customer.register.submit' | t }}" class="button">
+    <input type="submit" value="{{ 'customer.register.submit' | t }}" class="btn">
   </p>
   <a href="{{ shop.url }}">{{ 'customer.register.cancel' | t }}</a>
 {% endform %}
