--- a/src/templates/gift_card.liquid
+++ b/src/templates/gift_card.liquid
@@ -47,7 +47,7 @@
 
   <p>{{ 'gift_cards.issued.redeem' | t }}</p>
 
-  <a href="{{ shop.url }}" class="button" target="_blank">{{ 'gift_cards.issued.shop_link' | t }}</a>
+  <a href="{{ shop.url }}" class="btn" target="_blank">{{ 'gift_cards.issued.shop_link' | t }}</a>
 
   <canvas id="QrCode" class="giftcard-qr" data-identifier="{{ gift_card.qr_identifier }}" data-gift-card-qr></canvas>
 
