--- a/src/templates/search.liquid
+++ b/src/templates/search.liquid
@@ -18,7 +18,7 @@
            id="Search"
            value="{{ search.terms | escape }}"
            placeholder="{{ 'general.search.placeholder' | t }}">
-    <button type="submit" class="button">
+    <button type="submit" class="btn">
       {% include 'icon-search' %}
       <span class="icon-fallback-text">{{ 'general.search.submit' | t }}</span>
     </button>
