Icon and placeholder styles update

--- a/src/styles/components/_icons.scss
+++ b/src/styles/components/_icons.scss
@@ -1,8 +1,8 @@
 .icon {
   display: inline-block;
   vertical-align: middle;
-  width: 20px;
-  height: 20px;
+  width: rem(20px);
+  height: rem(20px);
   fill: currentColor;
 
   .no-svg & {
@@ -11,7 +11,7 @@
 }
 
 .icon--wide {
-  width: 40px;
+  width: rem(40px);
 }
 
 svg,
