--- a/src/styles/components/_placeholders.scss
+++ b/src/styles/components/_placeholders.scss
@@ -10,11 +10,11 @@
 }
 
 .placeholder-svg--small {
-  width: 480px;
+  width: rem(480px);
 }
 
 .placeholder-noblocks {
-  padding: 40px;
+  padding: rem(40px);
   text-align: center;
 }
 
