--- a/src/styles/core/_grid.scss
+++ b/src/styles/core/_grid.scss
@@ -14,13 +14,12 @@
 .col {
   width: 100%;
   max-width: 100%;
-  flex-basis: 0;
+  flex-basis: 100%;
   flex-grow: 1;
   padding-left: $grid-gutter;
 
   @include media-query($small-down) {
     padding-left: $grid-gutter-mobile;
-    flex-basis: 100%;
   }
 }
 
@@ -29,64 +28,188 @@
     - Create width classes, prepended by the breakpoint name.
 ==============================================================================*/
 @mixin grid-column-generator($breakpoint: '') {
+  // Whole
   .col--#{$breakpoint}1 {
-    max-width: percentage(1 / 12);
-    flex-basis: percentage(1 / 12);
-  }
-
-  .col--#{$breakpoint}2 {
-    max-width: percentage(2 / 12);
-    flex-basis: percentage(2 / 12);
-  }
-
-  .col--#{$breakpoint}3 {
-    max-width: percentage(3 / 12);
-    flex-basis: percentage(3 / 12);
-  }
-
-  .col--#{$breakpoint}4 {
-    max-width: percentage(4 / 12);
-    flex-basis: percentage(4 / 12);
-  }
-
-  .col--#{$breakpoint}5 {
-    max-width: percentage(5 / 12);
-    flex-basis: percentage(5 / 12);
-  }
-
-  .col--#{$breakpoint}6 {
-    max-width: percentage(6 / 12);
-    flex-basis: percentage(6 / 12);
-  }
-
-  .col--#{$breakpoint}7 {
-    max-width: percentage(7 / 12);
-    flex-basis: percentage(7 / 12);
-  }
-
-  .col--#{$breakpoint}8 {
-    max-width: percentage(8 / 12);
-    flex-basis: percentage(8 / 12);
-  }
-
-  .col--#{$breakpoint}9 {
-    max-width: percentage(9 / 12);
-    flex-basis: percentage(9 / 12);
-  }
-
-  .col--#{$breakpoint}10 {
-    max-width: percentage(10 / 12);
-    flex-basis: percentage(10 / 12);
-  }
-
-  .col--#{$breakpoint}11 {
-    max-width: percentage(11 / 12);
-    flex-basis: percentage(11 / 12);
-  }
-
-  .col--#{$breakpoint}12 {
     max-width: 100%;
     flex-basis: 100%;
+  }
+
+  // Halves
+  .col--#{$breakpoint}1-2 {
+    max-width: percentage(1 / 2);
+    flex-basis: percentage(1 / 2);
+  }
+
+  // Thirds
+  .col--#{$breakpoint}1-3 {
+    max-width: percentage(1 / 3);
+    flex-basis: percentage(1 / 3);
+  }
+
+  .col--#{$breakpoint}2-3 {
+    max-width: percentage(2 / 3);
+    flex-basis: percentage(2 / 3);
+  }
+
+  // Fourths
+  .col--#{$breakpoint}1-4 {
+    max-width: percentage(1 / 4);
+    flex-basis: percentage(1 / 4);
+  }
+
+  .col--#{$breakpoint}2-4 {
+    max-width: percentage(2 / 4);
+    flex-basis: percentage(2 / 4);
+  }
+
+  .col--#{$breakpoint}3-4 {
+    max-width: percentage(3 / 4);
+    flex-basis: percentage(3 / 4);
+  }
+
+  // Fifths
+  .col--#{$breakpoint}1-5 {
+    max-width: percentage(1 / 5);
+    flex-basis: percentage(1 / 5);
+  }
+
+  .col--#{$breakpoint}2-5 {
+    max-width: percentage(2 / 5);
+    flex-basis: percentage(2 / 5);
+  }
+
+  .col--#{$breakpoint}3-5 {
+    max-width: percentage(3 / 5);
+    flex-basis: percentage(3 / 5);
+  }
+
+  .col--#{$breakpoint}4-5 {
+    max-width: percentage(4 / 5);
+    flex-basis: percentage(4 / 5);
+  }
+
+  // Sixths
+  .col--#{$breakpoint}1-6 {
+    max-width: percentage(1 / 6);
+    flex-basis: percentage(1 / 6);
+  }
+
+  .col--#{$breakpoint}1-6 {
+    max-width: percentage(1 / 6);
+    flex-basis: percentage(1 / 6);
+  }
+
+  .col--#{$breakpoint}2-6 {
+    max-width: percentage(2 / 6);
+    flex-basis: percentage(2 / 6);
+  }
+
+  .col--#{$breakpoint}3-6 {
+    max-width: percentage(3 / 6);
+    flex-basis: percentage(3 / 6);
+  }
+
+  .col--#{$breakpoint}4-6 {
+    max-width: percentage(4 / 6);
+    flex-basis: percentage(4 / 6);
+  }
+
+  .col--#{$breakpoint}5-6 {
+    max-width: percentage(5 / 6);
+    flex-basis: percentage(5 / 6);
+  }
+
+  // Eights
+  .col--#{$breakpoint}1-8 {
+    max-width: percentage(1 / 8);
+    flex-basis: percentage(1 / 8);
+  }
+
+  .col--#{$breakpoint}2-8 {
+    max-width: percentage(2 / 8);
+    flex-basis: percentage(2 / 8);
+  }
+
+  .col--#{$breakpoint}3-8 {
+    max-width: percentage(3 / 8);
+    flex-basis: percentage(3 / 8);
+  }
+
+  .col--#{$breakpoint}4-8 {
+    max-width: percentage(4 / 8);
+    flex-basis: percentage(4 / 8);
+  }
+
+  .col--#{$breakpoint}5-8 {
+    max-width: percentage(5 / 8);
+    flex-basis: percentage(5 / 8);
+  }
+
+  .col--#{$breakpoint}6-8 {
+    max-width: percentage(6 / 8);
+    flex-basis: percentage(6 / 8);
+  }
+
+  .col--#{$breakpoint}7-8 {
+    max-width: percentage(7 / 8);
+    flex-basis: percentage(7 / 8);
+  }
+
+  // Tenths
+  .col--#{$breakpoint}1-10 {
+    max-width: percentage(1 / 10);
+    flex-basis: percentage(1 / 10);
+  }
+
+  .col--#{$breakpoint}2-10 {
+    max-width: percentage(2 / 10);
+    flex-basis: percentage(2 / 10);
+  }
+
+  .col--#{$breakpoint}3-10 {
+    max-width: percentage(3 / 10);
+    flex-basis: percentage(3 / 10);
+  }
+
+  .col--#{$breakpoint}4-10 {
+    max-width: percentage(4 / 10);
+    flex-basis: percentage(4 / 10);
+  }
+
+  .col--#{$breakpoint}5-10 {
+    max-width: percentage(5 / 10);
+    flex-basis: percentage(5 / 10);
+  }
+
+  .col--#{$breakpoint}6-10 {
+    max-width: percentage(6 / 10);
+    flex-basis: percentage(6 / 10);
+  }
+
+  .col--#{$breakpoint}7-10 {
+    max-width: percentage(7 / 10);
+    flex-basis: percentage(7 / 10);
+  }
+
+  .col--#{$breakpoint}8-10 {
+    max-width: percentage(8 / 10);
+    flex-basis: percentage(8 / 10);
+  }
+
+  .col--#{$breakpoint}9-10 {
+    max-width: percentage(9 / 10);
+    flex-basis: percentage(9 / 10);
+  }
+
+  // Variable Widths
+  .col--#{$breakpoint}auto {
+    width: auto;
+    max-width: none;
+    flex: 0 0 auto;
+  }
+
+  .col--#{$breakpoint}inline {
+    flex-basis: 0;
   }
 }
 
