Created product card component

--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -30,6 +30,7 @@
 @import './components/icons';
 @import './components/placeholders';
 @import './components/responsive-images';
+@import './components/product-card';
 
 // Sections
 @import './sections/blog-posts';
