--- a/src/sections/featured-collection.liquid
+++ b/src/sections/featured-collection.liquid
@@ -8,56 +8,47 @@
   Theme Store optional settings
   - Heading: title of the featured collection section
 {%- endcomment -%}
-<section class="featured-collection">
+{% case section.settings.grid %}
+  {% when 2 %}
+    {%- assign column_width = 'col--md-up-1-2' -%}
+  {% when 3 %}
+    {%- assign column_width = 'col--md-up-1-3' -%}
+  {% when 4 %}
+    {%- assign column_width = 'col--md-up-1-4' -%}
+  {% when 5 %}
+    {%- assign column_width = 'col--md-up-1-5' -%}
+{% endcase %}
+
+{%- assign product_limit = section.settings.grid | times: section.settings.rows -%}
+
+<section class="container featured-collection">
   {% if section.settings.title != blank %}
-    <h2 class="featured-collection__title">{{ section.settings.title | escape }}</h2>
+    <h2 class="h1 featured-collection__title">{{ section.settings.title | escape }}</h2>
   {% endif %}
 
   {%- assign collection = collections[section.settings.collection] -%}
 
-  {% for product in collection.products limit: 6 %}
-    <a href="{{ product.url | within: collection }}" class="featured-collection-item">
-      {% if product.featured_image != blank %}
-        <div class="featured-collection__image">
-          {% include 'responsive-image' with
-            image: product.featured_image,
-            max_width: 480,
-            max_height: 480
-          %}
-        </div>
-      {% endif %}
+  <ul class="row">
+    {% for product in collection.products limit: product_limit %}
+      <li class="col {{ column_width }}">
+        {%- include 'product-card' -%}
+      </li>
+    {% else %}
+      {% for i in (1..6) %}
+        <li class="col {{ column_width }}">
+          <div class="product-card">
+            <a href="#" class="product-card__link">
+              {% capture current %}{% cycle 1, 2, 3, 4, 5, 6 %}{% endcapture %}
+              {{ 'product-' | append: current | placeholder_svg_tag: 'placeholder-svg placeholder-svg--small' }}
 
-      <p>{{ product.title | escape }}</p>
-      <span>
-        {% if product.compare_at_price > product.price %}
-          {% if product.price_varies %}
-            {%- assign sale_price = product.price | money -%}
-            {{ 'products.product.on_sale_from_html' | t: price: sale_price }}
-          {% else %}
-            {{ 'products.product.on_sale' | t }}
-            {{ product.price | money }}
-          {% endif %}
-        {% else %}
-          {% if product.price_varies %}
-            {%- assign price = product.price | money -%}
-            {{ 'products.product.from_text_html' | t: price: price }}
-          {% else %}
-            {{ product.price | money }}
-          {% endif %}
-        {% endif %}
-      </span>
-    </a>
-  {% else %}
-    {% for i in (1..6) %}
-      <a href="#" class="featured-collection-item">
-        {% capture current %}{% cycle 1, 2, 3, 4, 5, 6 %}{% endcapture %}
-        {{ 'product-' | append: current | placeholder_svg_tag: 'placeholder-svg placeholder-svg--small' }}
-
-        <p>{{ 'homepage.onboarding.product_title' | t }}</p>
-        <p>{{ 1999 | money }}</p>
-      </a>
+              <p class="product-card__title">{{ 'homepage.onboarding.product_title' | t }}</p>
+              <p class="product-card__price">{{ 1999 | money }}</p>
+            </a>
+          </div>
+        </li>
+      {% endfor %}
     {% endfor %}
-  {% endfor %}
+  </ul>
 </section>
 
 {% schema %}
@@ -74,6 +65,24 @@
         "id": "collection",
         "type": "collection",
         "label": "Collection"
+      },
+      {
+        "type": "range",
+        "id": "grid",
+        "label": "Products per row",
+        "min": 2,
+        "max": 5,
+        "step": 1,
+        "default": 3
+      },
+      {
+        "type": "range",
+        "id": "rows",
+        "label": "Rows",
+        "min": 1,
+        "max": 5,
+        "step": 1,
+        "default": 2
       }
     ],
     "presets": [
