--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -31,6 +31,7 @@
 @import './components/placeholders';
 @import './components/responsive-images';
 @import './components/product-card';
+@import './components/article-card';
 
 // Sections
 @import './sections/blog-posts';
