--- a/src/sections/rich-text.liquid
+++ b/src/sections/rich-text.liquid
@@ -6,7 +6,7 @@
   - Heading: title of the rich text section
   - Text: description of the rich text section
 {%- endcomment -%}
-<section>
+<section class="container">
   {%- if section.settings.title != blank -%}
     <h2>{{ section.settings.title | escape }}</h2>
   {%- endif -%}
