--- a/src/templates/list-collections.liquid
+++ b/src/templates/list-collections.liquid
@@ -1,27 +1,34 @@
 {% comment %}
   This page represents the /collections and /products pages.
 {% endcomment %}
+<div class="container">
 
-<h1>{{ page_title }}</h1>
+  <h1>{{ page_title }}</h1>
 
-{% for collection in collections %}
-  {% unless collection.handle == 'frontpage' %}
-    <a href="{{ collection.url }}" title="{{ 'collections.general.link_title' | t: title: title }}">
-      {% if collection.image != blank or collection.products.first != blank %}
-        {%- assign image_object = collection.image | default: collection.products.first.featured_image -%}
-        {% include 'responsive-image' with
-          image: image_object,
-          max_width: 480,
-          max_height: 480
-        %}
-      {% else %}
-        {% capture current %}{% cycle 1, 2, 3, 4, 5, 6 %}{% endcapture %}
-        {{ 'collection-' | append: current | placeholder_svg_tag: 'placeholder-svg placeholder-svg--small' }}
-      {% endif %}
-    </a>
+  <ul class="row">
+    {% for collection in collections %}
+      {% unless collection.handle == 'frontpage' %}
+      <li class="col col--1-2 col--md-up-1-3 text-center">
+        <a href="{{ collection.url }}" title="{{ 'collections.general.link_title' | t: title: title }}">
+          {% if collection.image != blank or collection.products.first != blank %}
+            {%- assign image_object = collection.image | default: collection.products.first.featured_image -%}
+            {% include 'responsive-image' with
+              image: image_object,
+              max_width: 480,
+              max_height: 480
+            %}
+          {% else %}
+            {% capture current %}{% cycle 1, 2, 3, 4, 5, 6 %}{% endcapture %}
+            {{ 'collection-' | append: current | placeholder_svg_tag: 'placeholder-svg placeholder-svg--small' }}
+          {% endif %}
+        </a>
 
-    <p>
-      <a href="{{ collection.url }}" title="{{ 'collections.general.link_title' | t: title: title }}">{{ collection.title }}</a>
-    </p>
-  {% endunless %}
-{% endfor %}
+        <p>
+          <a href="{{ collection.url }}" title="{{ 'collections.general.link_title' | t: title: title }}">{{ collection.title }}</a>
+        </p>
+      </li>
+      {% endunless %}
+    {% endfor %}
+  </ul>
+
+</div>
