Blog template updated
Moved into section with settings

--- a/src/templates/blog.liquid
+++ b/src/templates/blog.liquid
@@ -1,46 +1,1 @@
-{% paginate blog.articles by 5 %}
-<div class="container">
-  {%- assign blog_title = blog.title -%}
-
-  {% if current_tags %}
-    {% capture blog_title %}{{ blog.title | link_to: blog.url }} &mdash; {{ current_tags.first }}{% endcapture %}
-  {% endif %}
-
-  <h1>{{ blog_title }}</h1>
-
-  {% if blog.all_tags.size > 0 %}
-    <h2>{{ 'blogs.general.categories' | t }}</h2>
-
-    <ul>
-      {% for tag in blog.all_tags %}
-
-        {% if current_tags contains tag %}
-          <li>{{ tag }}</li>
-        {% else %}
-          <li>{{ tag | link_to_tag: tag }}</li>
-        {% endif %}
-
-      {% endfor %}
-    </ul>
-  {% endif %}
-
-
-  {% comment %}
-
-  Article Previews
-  ====================
-  {% endcomment %}
-
-  <ul class="row">
-    {% for article in blog.articles %}
-      <li class="col col--1-2 col--md-up-1-3">
-        {%- include 'article-card' -%}
-      </li>
-    {% endfor %}
-  </ul>
-
-  {% if paginate.pages > 1 %}
-    {% include 'pagination' %}
-  {% endif %}
-</div>
-{% endpaginate %}
+{% section 'blog-template' %}
