--- a/src/snippets/article-card.liquid
+++ b/src/snippets/article-card.liquid
@@ -13,7 +13,7 @@
 
   <div>
     {% if section.settings.blog_show_author %}
-      <span>{{ 'blogs.article.by_author' | t: author: article.author }}</span>
+      <p>{{ 'blogs.article.by_author' | t: author: article.author }}</p>
     {% endif %}
 
     {% if section.settings.blog_show_date %}
@@ -23,11 +23,13 @@
     {% endif %}
 
     <div class="rte">
-      {% if article.excerpt.size > 0 %}
-        {{ article.excerpt }}
-      {% else %}
-        {{ article.content | strip_html | truncate: 150 }}
-      {% endif %}
+      <p>
+        {% if article.excerpt.size > 0 %}
+          {{ article.excerpt | strip_html | truncate: 150 }}
+        {% else %}
+          {{ article.content | strip_html | truncate: 150 }}
+        {% endif %}
+      </p>
     </div>
 
     {% if article.tags.size > 0 %}
