404 page layout adjustments

--- a/src/templates/404.liquid
+++ b/src/templates/404.liquid
@@ -1,2 +1,6 @@
-<h1>{{ 'general.404.title' | t }}</h1>
-<p>{{ 'general.404.subtext_html' | t }}</p>
+<div class="container">
+  <div class="mt-6 mb-6 pt-6 pb-6 text-center">
+    <h1>{{ 'general.404.title' | t }}</h1>
+    <p>{{ 'general.404.subtext_html' | t }}</p>
+  </div>
+</div>
