--- a/src/templates/cart.liquid
+++ b/src/templates/cart.liquid
@@ -1,14 +1,17 @@
+<div class="container">
 {% if cart.item_count > 0 %}
-  <h1>{{ 'cart.general.title' | t }}</h1>
+  <div class="text-center--sm-down">
+    <h1>{{ 'cart.general.title' | t }}</h1>
+  </div>
 
   <form action="/cart" method="post" novalidate>
-    <table class="responsive-table">
-      <thead class="small--hide">
-        <tr>
-          <th colspan="2">{{ 'cart.label.product' | t }}</th>
-          <th>{{ 'cart.label.price' | t }}</th>
-          <th>{{ 'cart.label.quantity' | t }}</th>
-          <th>{{ 'cart.label.total' | t }}</th>
+    <table class="cart-table responsive-table">
+      <thead class="hide--sm-down">
+        <tr class="cart-table__row cart-table__row--header">
+          <th class="cart-table__header" colspan="2">{{ 'cart.label.product' | t }}</th>
+          <th class="cart-table__header">{{ 'cart.label.price' | t }}</th>
+          <th class="cart-table__header">{{ 'cart.label.quantity' | t }}</th>
+          <th class="cart-table__header">{{ 'cart.label.total' | t }}</th>
         </tr>
       </thead>
       <tbody>
@@ -23,18 +26,18 @@
         helpers used for responsive-table labels
         {% endcomment %}
 
-          <tr class="responsive-table-row">
+          <tr class="cart-table__row responsive-table-row">
 
-            <td data-label="{{ 'customer.order.product' | t }}">
+            <td class="cart-table__item" data-label="{{ 'customer.order.product' | t }}">
 
               {% if item.image != blank %}
                 <a href="{{ item.url | within: collections.all }}">
-                  {{ item | img_url: '240x240' | img_tag: item.title }}
+                  <img class="cart-table__item-image" src="{{ item | img_url: '240x240' }}" alt="{{ item.title }}">
                 </a>
               {% endif %}
 
             </td>
-            <td>
+            <td class="cart-table__item">
               <a href="{{ item.url }}">{{ item.product.title }}</a>
 
               {% unless item.product.has_only_default_variant %}
@@ -64,7 +67,7 @@
                 <small>{{ 'cart.general.remove' | t }}</small>
               </a>
             </td>
-            <td data-label="{{ 'cart.label.price' | t }}">
+            <td class="cart-table__item" data-label="{{ 'cart.label.price' | t }}">
               {% if item.original_line_price != item.line_price %}
                 <span class="visually-hidden">{{ 'cart.label.discounted_price' | t }}</span>
                 {{ item.price | money }}
@@ -74,15 +77,16 @@
                 {{ item.price | money }}
               {% endif %}
             </td>
-            <td data-label="{{ 'cart.label.quantity' | t }}">
+            <td class="cart-table__item" data-label="{{ 'cart.label.quantity' | t }}">
               <input type="number"
                      name="updates[]"
                      id="updates_{{ item.key }}"
+                     class="cart-table__item-quantity"
                      value="{{ item.quantity }}"
                      min="0"
                      aria-label="{{ 'cart.general.item_quantity' | t }}">
             </td>
-            <td data-label="{{ 'cart.label.total' | t }}">
+            <td class="cart-table__item" data-label="{{ 'cart.label.total' | t }}">
               {{ item.line_price | money }}
             </td>
           </tr>
@@ -91,38 +95,47 @@
       </tbody>
     </table>
 
-    {% if settings.cart_notes_enable %}
-      <label for="CartSpecialInstructions">{{ 'cart.general.note' | t }}</label>
-      <textarea name="note" id="CartSpecialInstructions">{{ cart.note }}</textarea>
-    {% endif %}
+    <div class="row">
+      {% if settings.cart_notes_enable %}
+        <div class="col col--md-up-3-4">
+          <label for="CartSpecialInstructions">{{ 'cart.general.note' | t }}</label>
+          <textarea id="CartSpecialInstructions" class="full-width" name="note">{{ cart.note }}</textarea>
+        </div>
+      {% endif %}
 
-    <p>{{ 'cart.general.subtotal' | t }}</p>
-    <p>{{ cart.total_price | money }}</p>
-    {% if cart.total_discounts > 0 %}
-      <p>{{ 'cart.general.savings' | t }} {{ cart.total_discounts | money }}</p>
-    {% endif %}
-    <p>{{ 'cart.general.shipping_at_checkout' | t }}</p>
-    <input type="submit" name="update" value="{{ 'cart.general.update' | t }}">
-    <input type="submit" name="checkout" class="btn" value="{{ 'cart.general.checkout' | t }}">
+      <div class="col{% if settings.cart_notes_enable %} col--md-up-1-4{% endif %} text-center--sm-down">
+        <p>{{ 'cart.general.subtotal' | t }}</p>
+        <p>{{ cart.total_price | money }}</p>
+        {% if cart.total_discounts > 0 %}
+          <p>{{ 'cart.general.savings' | t }} {{ cart.total_discounts | money }}</p>
+        {% endif %}
+        <p>{{ 'cart.general.shipping_at_checkout' | t }}</p>
+        <button type="submit" name="button" class="btn">{{ 'cart.general.update' | t }}</button>
+        <button type="submit" name="button" class="btn">{{ 'cart.general.checkout' | t }}</button>
+      </div>
+    </div>
   </form>
 {% else %}
-  <h1>{{ 'cart.general.title' | t }}</h1>
+  <div class="text-center">
+    <h1>{{ 'cart.general.title' | t }}</h1>
 
-  {% comment %}
-  Cart empty state
-  {% endcomment %}
-  <div class="supports-cookies">
-    <p>{{ 'cart.general.empty' | t }}</p>
-    <p>{{ 'cart.general.continue_browsing_html' | t }}</p>
-  </div>
+    {% comment %}
+    Cart empty state
+    {% endcomment %}
+    <div class="supports-cookies">
+      <p>{{ 'cart.general.empty' | t }}</p>
+      <p>{{ 'cart.general.continue_browsing_html' | t }}</p>
+    </div>
 
-  {% comment %}
-  Cart no cookies state
-  ---------------------
-  Browser cookies are required to use the cart. If cookies aren't enabled in the
-  browser a message is displayed prompting the user to enable them.
-  {% endcomment %}
-  <div class="supports-no-cookies">
-    <p>{{ 'cart.general.cookies_required' | t }}</p>
+    {% comment %}
+    Cart no cookies state
+    ---------------------
+    Browser cookies are required to use the cart. If cookies aren't enabled in the
+    browser a message is displayed prompting the user to enable them.
+    {% endcomment %}
+    <div class="supports-no-cookies">
+      <p>{{ 'cart.general.cookies_required' | t }}</p>
+    </div>
   </div>
 {% endif %}
+</div>
