Created drawer modules

--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -23,6 +23,7 @@
 @import './core/responsive-tables';
 @import './core/rte';
 @import './core/typography';
+@import './core/drawers';
 
 // Components
 @import './components/buttons';
