Drawer module fixes
Fixed closing drawer caused by cliking inside it - other minor fixes

--- a/src/layout/theme.liquid
+++ b/src/layout/theme.liquid
@@ -62,9 +62,11 @@
 
   {% section 'header' %}
 
-  <main role="main" id="MainContent">
-    {{ content_for_layout }}
-  </main>
+  <div id="PageContainer">
+    <main role="main" id="MainContent">
+      {{ content_for_layout }}
+    </main>
+  </div>
 
   {% section 'footer' %}
 
